# easy-cpp-projects

./: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
cpp/: files.json
cpp/template/src/: main.cpp
src/: extension.ts
src/test/: extension.test.ts
templates/: Makefile  files.json  tasks.json
templates/class/: easyclass.hpp
templates/classes/: files.json  files_testing.json
templates/classes/constructor/: easyclass.cpp
templates/classes/empty/: easyclass.cpp  easyclass.hpp
templates/classes/singleton/: easyclass.cpp  easyclass.hpp
templates/classes/template/: easyclass.hpp  easyclass.tpp
templates/project/: files.json
templates/project/CMake/: CMakeLists.txt  launch.json  tasks.json
templates/project/clang/: Makefile
templates/project/gcc/: launch.json
templates/project/hello-world/: main.cpp
templates/project/mingw/: Makefile  launch.json  tasks.json
templates/project/msvc/: build_x64.bat  build_x64_2019.bat  build_x86.bat  build_x86_2019.bat  launch.json  tasks.json
templates/project/shared/: Makefile
templates/wsl/: tasks.json
